Bug 855866: Fire toplevel-window-ready after usePrivateBrowsing is initialized, but still before the document starts loading; r=bzbarsky